--- a/src/pages/instrucao/Instrucao.module.css
+++ b/src/pages/instrucao/Instrucao.module.css
@@ -12,6 +12,8 @@
   flex-direction: column;
   align-items: center;
   padding-top: 80px; 
+  flex-grow: 1;
+  min-height: 0;
 }
 
 .buttonWrapper {
@@ -45,6 +47,6 @@
   align-items: center; 
   margin-top: 70px;
   overflow-y: auto;
-  max-height: 450px;
   padding-right: 8px;
+  max-height: calc(100vh - 408px); 
 }
